# Desafios2026

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
core/: admin.py  locks.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
core/management/commands/: seed_movies.py
core/migrations/: 0001_initial.py
frontend/: app.js  index.html  styles.css
