[project]
name = "cinepolis-api"
version = "0.1.0"
description = ""
authors = [
    {name = "d1zm4as",email = "pedrofamilia364@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "redis (>=7.3.0,<8.0.0)",
    "django-redis (>=6.0.0,<7.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
